' https://plantuml.com/de/class-diagram
@startuml Overview
title DiMAS Core Overview
'skinparam Style strictuml

' Operational
interface Operational
enum OperationState
Operational <|-- Component
Operational <|-- Capability
OperationState --right Operational

' ComponentRegister
class ComponentRegister
interface ComponentRegistrar
ComponentRegistrar <|-- ComponentRegister
ComponentRegister *--left "*" Component : components >

' System
interface System
Operational <|-- System
System *--left "1" ComponentRegister : components >
System *-- "1" Configuration : configuration >
System *--right "*" Connection : connections >

' Component
interface Component
'Component *-- "0..*" Component : components
Component *--left "*" Capability : capabilities >
Component o-- "1" Configuration : configuration >
Component o-- "*" CapabilityDescription : provided >
Component *-- "*" CapabilityDescription : required >

' Capability
interface Capability
Capability -- "1" CapabilityDescription : >

' CapabilityDescription
interface CapabilityDescription

' configuration
interface Configuration
Configuration *-- "*" Configuration : configurations >

' Connection
interface Connection
@enduml
